package com.tangerine.ticketbox.order;

public enum OrderStatus {
    ACCEPTED,
    PAYMENT_CONFIRMED,
    RESERVED
}
