package com.tangerine.ticketbox.theatre;

public enum Genre {
    OPERA,
    PLAY,
    MUSICAL
}
