classDiagram

%% domain TicketOrder
    class TicketOrder {
        UUID ticketOrderId
        Email email
        LocalDate orderedAt
        OrderStatus ticketOrderStatus
        List< Ticket > tickets
    }

    class Email {
        String emailValue
    }

    class OrderStatus {
        <<enumeration>>
        ACCEPTED
        RESERVED
    }

    TicketOrder --> Email
    TicketOrder --> OrderStatus
    TicketOrder --> Ticket
    Ticket --> Performance
%% domain Ticket
    class Ticket {
        UUID ticketId
        UUID orderId
        Price price
        Quantity quantity
        LocalDate reservedAt
    }

    Ticket --> Price
%% domain Performance
    class Performance {
        UUID performanceId
        PerformanceName performanceName
        Genre genre
        AgeRate ageRate
        LocalDate openRun
        LocalDate closeRun
        Stage stage
        Price price
    }

    class PerformanceName {
        String performanceNameValue
    }

    class Genre {
        <<enumeration>>
        OPERA
        PLAY
        MUSICAL
    }

    class AgeRate {
        <<enumeration>>
        ALL(0)
        FIFTEEN(15)
        ADULT_ONLY(19)
    }

    class Stage {
        <<enumeration>>
        A1, A2,
        B1, B2
    }

    class Price {
        long priceValue
    }

    Performance --> PerformanceName
    Performance --> Genre
    Performance --> AgeRate
    Performance --> Stage
    Performance --> Price